# RIDB

./: README.MD  pyproject.toml  ridb.py  units_conv.py
materials/: TiO2_ebeam_am_030925.yaml  TiO2_ebeam_osc_030925.npy  TiO2_ebeam_osc_030925.yaml  TiO2_sput_am_030925.yaml  TiO2_sput_osc_030925.npy  TiO2_sput_osc_030925.yaml  aSi_LPCVD_150nm_110824.npy  aSi_LPCVD_150nm_110824.yaml  aSi_LPCVD_200nm_110824.npy  aSi_LPCVD_200nm_110824.yaml
ridb/: __init__.py
ridb/materials/: Si3N4_LPCVD_high_stress_010925.npy  Si3N4_LPCVD_high_stress_010925.yaml  Si3N4_LPCVD_low_stress_010925.npy  Si3N4_LPCVD_low_stress_010925.yaml  TiO2_ebeam_am_030925.npy  TiO2_ebeam_am_030925.yaml  TiO2_sput_am_030925.npy  TiO2_sput_osc_030925.yaml
ridb/src/: ridb.py  utils.py
