# pyproject.toml

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ridb"
version = "0.1.0"
description = "Custom Refractive Index Database (RIDB) for optical materials"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "RodionovSA" }]
license = { text = "MIT" }  # or your license
dependencies = [
]

[project.urls]
Homepage = "https://github.com/RodionovSA/RIDB"

# If you use a src/ layout, keep this. If your package is top-level, remove this block.
[tool.setuptools.packages.find]
where = ["."]
include = ["ridb*"]

# Include data files shipped inside the ridb package
[tool.setuptools.package-data]
ridb = ["materials/**"]